<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apprenti.checkpoint1cozart98.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_nom"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_prenom"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/editNom"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editNom" />

    <EditText
        android:id="@+id/editEcole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_classe"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/editPrenom"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editPrenom" />

    <EditText
        android:id="@+id/editLangage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_langage"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/editEcole"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editEcole" />

    <Button
        android:id="@+id/buttonEnvoyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton_envoyer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/editLangage" />
</android.support.constraint.ConstraintLayout>
